# ascobot

./: Dockerfile  README.md  nn
head_look_to_point/src/: hhead_look.cpp  home.py
look_hand/: CMakeLists.txt  package.xml  setup.py
look_hand/scripts/: mission_planner.py
look_hand/src/robot_helpers/: package.xml
look_hand/srv/: CreateFrameAtPose.srv
look_to_point/: CMakeLists.txt  package.xml
look_to_point/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
look_to_point/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
look_to_point/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
look_to_point/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
look_to_point/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
look_to_point/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
look_to_point/src/: can_dtct.cpp  corner_detection.cpp  look_to_point.cpp  target_pos.cpp  test.cpp  vision_node.cpp
mission/: CMakeLists.txt  mission_planner.py  package.xml
mission/src/msg /: arm_actions.msg
mission/src/scripts/: mission_planner.py
mission/src/srv/: can_detection.srv  grip.srv
moveit_commander/: CMakeLists.txt
moveit_commander/launch/: ascobot.launch  test.launch
moveit_commander/script/: head.py  move_base.py  move_base_2.py  mv.py  mv_l.py  mv_r.py  pub.py  robot_controller_ros.py  stop.py
moveit_commander/src/moveit_commander/: move_group.py
retail_store_simulation/launch/: empty.launch  tiago_simulation.launch
retail_store_simulation/models/backdrop/: backdrop.dae  model.sdf
retail_store_simulation/models/full_cabinet/: full_cabinet.dae  model.config
retail_store_simulation/models/standard_can_fit/: model.config  model.sdf
retail_store_simulation/scripts/: cp_to_opt.sh
ros_goal/: CMakeLists.txt  package.xml
ros_goal/scripts/: rr.py
stocking_challenge/: CMakeLists.txt  package.xml
stocking_challenge/launch/: solution.launch
tiago_dual_moveit_tutorial/: CMakeLists.txt
tiago_dual_moveit_tutorial/src/: mmove_larm.cpp  move_arm.cpp  move_base.cpp  move_base.py  move_larm.cpp  mv.py  plan_dual_arm_torso_ik (copy).cpp  robot_controller_ros.py  stop.py
tiago_pcl_tutorial/src/: home.py
transform/: CMakeLists.txt  package.xml
transform/robot_helpers/: robot_helpers.py
transform/src/robot_helpers/: CMakeLists.txt  setup.py
transform/src/robot_helpers/scripts/: transform_server.py
transform/src/robot_helpers/srv/: CreateFrame.srv  LookupTransform.srv  TransformPoses.srv
vision/: CHANGELOG.rst  CMakeLists.txt  package.xml
vision/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
vision/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
vision/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
vision/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
vision/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
vision/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
ws/retail_store_simulation/launch/: tiago_simulation.launch
ws/retail_store_simulation/models/backdrop/: model.config
ws/retail_store_simulation/models/full_cabinet/: full_cabinet (copy).dae  model.sdf
ws/retail_store_simulation/models/standard_can_fit/: standard_can.blend  standard_can_fit.dae
ws/src/: image_v1.py
ws/worlds/: stocking_challenge.world
